src/snapshots/interpreter__parser__tests__comments@1.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `%asfs`"
---
stmts:
  - Comment: "%asfs"
errors: []

