src/snapshots/interpreter__parser__tests__known_macros@Any(n)_with_text.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\'abg ds`"
---
stmts:
  - KnownMacro:
      name: "'"
      args:
        - Text: a
      is_alt: false
  - Text: bg
  - Token: Space
  - Text: ds
errors: []

