src/snapshots/interpreter__parser__tests__known_macros@accent3.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `asf\\`ofs af`"
---
stmts:
  - Text: asf
  - KnownMacro:
      name: "`"
      args:
        - Text: o
      is_alt: false
  - Text: fs
  - Token: Space
  - Text: af
errors: []

