src/snapshots/interpreter__parser__tests__known_macros@any2_2.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\atopwithdelims[)notpart`"
---
stmts:
  - KnownMacro:
      name: atopwithdelims
      args:
        - Token: LSquare
        - Token: RParen
      is_alt: false
  - Text: notpart
errors: []

